examples/gateway-api/aws/referencegrant.yaml
# Install in the Gateway namespace (here: posit-gateway).
# Adjust .spec.from[].namespace to the namespaces where Connect, PM, and Workbench HTTPRoutes are created.
# https://gateway-api.sigs.k8s.io/api-types/referencegrant/
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: posit-products-to-shared-gateway
  namespace: posit-gateway
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: rstudio-connect
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: rstudio-pm
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: rstudio-workbench
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
